{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 72,
  "lineage": "3323989c-160b-a218-acb8-ed1253f7a5e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_instance_name",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024a64a6685d05041",
            "arn": "arn:aws:ec2:us-east-1:977176859364:instance/i-004b496afd97d1caf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-004b496afd97d1caf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_nvirginia",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff5691c6d5119db0",
            "private_dns": "ip-172-31-81-184.ec2.internal",
            "private_ip": "172.31.81.184",
            "public_dns": "ec2-54-172-176-122.compute-1.amazonaws.com",
            "public_ip": "54.172.176.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0e6ed61c76b6da024",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx_sg",
              "ssh_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-aa562d84",
            "tags": {
              "Name": "ngnix-machine-qt"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081d559db3835c71b",
              "sg-0ce1128fc1787a011"
            ]
          },
          "depends_on": [
            "aws_security_group.tf_sg_nginx",
            "aws_security_group.tf_sg_ssh",
            "data.template_file.userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg_nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:security-group/sg-0ce1128fc1787a011",
            "description": "This Security group allows port 80 and 22 from 0.0.0.0/0",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce1128fc1787a011",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": null,
            "owner_id": "977176859364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx-Terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-ca37beb0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:security-group/sg-081d559db3835c71b",
            "description": "This allows port 22 from my ip address",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081d559db3835c71b",
            "ingress": [
              {
                "cidr_blocks": [
                  "110.224.142.226/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg",
            "name_prefix": null,
            "owner_id": "977176859364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-Terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-ca37beb0"
          }
        }
      ]
    }
  ]
}